[gd_scene load_steps=27 format=3 uid="uid://1jqrl761m7hp"]

[ext_resource type="Script" path="res://Scripts/Global/Enemy/EnemyBase.gd" id="1_0sfna"]
[ext_resource type="Script" path="res://Scripts/Global/Enemy/BrainTransitionResource.gd" id="2_bjbn3"]
[ext_resource type="PackedScene" uid="uid://bbd2t6fam8mhl" path="res://Graphics/Enemies/ShadowBeast/ShadowBeast.glb" id="3_uw03f"]
[ext_resource type="Material" uid="uid://hjui3g205u7o" path="res://Graphics/Enemies/ShadowBeast/M_ShadowBeast.tres" id="4_cjsbl"]
[ext_resource type="Animation" uid="uid://bfwbia6q1ewhc" path="res://Graphics/Enemies/ShadowBeast/Attack.res" id="5_d85q1"]
[ext_resource type="Animation" uid="uid://ckwah8r2nhmxc" path="res://Graphics/Enemies/ShadowBeast/Idle.res" id="6_uxsrr"]
[ext_resource type="Animation" uid="uid://5geplj81r2qg" path="res://Graphics/Enemies/ShadowBeast/Move.res" id="7_ihtu0"]
[ext_resource type="Script" path="res://DialogueSystem/scripts/NPC.gd" id="8_q6snn"]
[ext_resource type="PackedScene" uid="uid://bj86i4actyt73" path="res://Prefabs/Player/drop_shadow.tscn" id="8_xte46"]
[ext_resource type="Script" path="res://Scripts/Global/Enemy/BrainWaitForPlayer.gd" id="9_6qnxa"]
[ext_resource type="Script" path="res://Scripts/Global/Enemy/BrainFollowPlayer.gd" id="10_me8ig"]
[ext_resource type="Script" path="res://Scripts/Global/Enemy/BrainThrowAttack.gd" id="11_r5h0c"]
[ext_resource type="PackedScene" uid="uid://dwpn3nvkjkw5s" path="res://Prefabs/Enemy/enemyFireball.tscn" id="12_dxk6a"]

[sub_resource type="Resource" id="Resource_6bxb3"]
script = ExtResource("2_bjbn3")
cond = Array[int]([0, 2])
values = Array[float]([0.99, 8.0])
operator = 1

[sub_resource type="Resource" id="Resource_eu7n3"]
script = ExtResource("2_bjbn3")
cond = Array[int]([1])
values = Array[float]([1.5])
operator = 0

[sub_resource type="Resource" id="Resource_qvu5b"]
script = ExtResource("2_bjbn3")
cond = Array[int]([1])
values = Array[float]([0.5])
operator = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h5276"]
radius = 0.9
height = 3.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfbxk"]
_data = {
"Attack": ExtResource("5_d85q1"),
"Idle": ExtResource("6_uxsrr"),
"Move": ExtResource("7_ihtu0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nf2si"]
animation = &"ShadowBeast/Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gn0eq"]
animation = &"ShadowBeast/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fdnh"]
animation = &"ShadowBeast/Move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_76i4l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ohlol"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t7dg1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rcn7c"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3pmpe"]
states/Attack/node = SubResource("AnimationNodeAnimation_nf2si")
states/Attack/position = Vector2(649, 159)
states/Idle/node = SubResource("AnimationNodeAnimation_gn0eq")
states/Idle/position = Vector2(350, 122)
states/Move/node = SubResource("AnimationNodeAnimation_0fdnh")
states/Move/position = Vector2(548, 116)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_76i4l"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_ohlol"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_t7dg1"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_rcn7c")]

[node name="ShadowBoss" type="RigidBody3D" groups=["SerializedNode"]]
top_level = true
collision_layer = 16
collision_mask = 7
axis_lock_angular_x = true
axis_lock_angular_z = true
contact_monitor = true
max_contacts_reported = 2
linear_damp_mode = 1
linear_damp = 200.0
angular_damp = 200.0
script = ExtResource("1_0sfna")
renderers = Array[NodePath]([NodePath("CollisionShape3D/ShadowBeast/Armature/GeneralSkeleton/DONOTCOPY_ShadowBeast")])
look_at_transform = NodePath("CollisionShape3D/LookAt")
TouchDamage = 11
Defense = 30
MaxHealth = 240.0
tree = NodePath("CollisionShape3D/ShadowBeast/AnimationTree")
brains = Array[NodePath]([NodePath("CollisionShape3D/Brain_WaitForPlayer"), NodePath("CollisionShape3D/Brain_FollowPlayer"), NodePath("CollisionShape3D/Brain_FireBullet")])
brainTransitions = Array[ExtResource("2_bjbn3")]([SubResource("Resource_6bxb3"), SubResource("Resource_eu7n3"), SubResource("Resource_qvu5b")])
IdleName = "Idle"
MoveName = "Move"
AttackName = "Attack"
MoveSpeed = 40.0
minCoinsOnDeath = 0
maxCoinsOnDeath = 0
chanceOfHeart = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_h5276")

[node name="ShadowBeast" parent="CollisionShape3D" instance=ExtResource("3_uw03f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.292844, 0)

[node name="DONOTCOPY_ShadowBeast" parent="CollisionShape3D/ShadowBeast/Armature/GeneralSkeleton" index="0"]
surface_material_override/0 = ExtResource("4_cjsbl")

[node name="AnimationTree" type="AnimationTree" parent="CollisionShape3D/ShadowBeast"]
libraries = {
"ShadowBeast": SubResource("AnimationLibrary_jfbxk")
}
tree_root = SubResource("AnimationNodeStateMachine_3pmpe")

[node name="DropShadow" parent="CollisionShape3D" instance=ExtResource("8_xte46")]

[node name="LookAt" type="Node3D" parent="CollisionShape3D"]
top_level = true

[node name="Brain_WaitForPlayer" type="Node3D" parent="CollisionShape3D"]
script = ExtResource("9_6qnxa")
root = NodePath("../..")

[node name="Brain_FollowPlayer" type="Node3D" parent="CollisionShape3D"]
script = ExtResource("10_me8ig")
root = NodePath("../..")
nextBrainID = 2
SpeedMultiplier = 2.0

[node name="Brain_FireBullet" type="Node3D" parent="CollisionShape3D"]
script = ExtResource("11_r5h0c")
root = NodePath("../..")
BulletPrefab = ExtResource("12_dxk6a")

[node name="NPC" type="Node3D" parent="."]
script = ExtResource("8_q6snn")
actor_name = "Boss"
send_message_path = NodePath("..")
usesCC = false

[connection signal="KillRemotely" from="." to="." method="KillWithoutSpoils"]
[connection signal="OnDamage" from="." to="." method="_on_on_damage"]
[connection signal="body_entered" from="." to="." method="OnTouchDamage"]

[editable path="CollisionShape3D/ShadowBeast"]
